Création de la page About et Error

--- a/src/components/banner/_banner.scss
+++ b/src/components/banner/_banner.scss
@@ -16,20 +16,31 @@
         height: 120px;
     }
     &__title {
-        font-size: 2em;
+        font-size: 48px;
         display: flex;
         align-items: center;
         height: 100%;
-    
-        @media (max-width: $screen-sm) {
+        padding: 20px;
+        text-shadow: 
+        0 5px 3px rgba(0, 0, 0, 0.25),
+        1px 0px 0.5px black,
+        -1px 0px 0.5px black,
+        0px 1px 0.5px black,
+        0px -1px 0.5px black,
+        -1px 1px 0.5px black,
+        1px 1px 0.5px black,
+        1px -1px 0.5px black,
+        -1px -1px 0.5px black;
+        @media (max-width: $screen-lg) {
+            font-size: 36px; 
+            text-shadow: none;
+        }    
+        @media (max-width: $screen-md) {
             font-size: 24px;
-            text-wrap: balance;
-            padding: 20px;  
+            text-wrap: balance;  
         }
     }
 }
-
-
 
 .background-box {
     position: absolute;
@@ -41,7 +52,6 @@
     background-position: center;
     border-radius: 12px;
     z-index: -1;
-
     &::after {
         content: '';
         position: absolute;
