--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -6,4 +6,6 @@
 @forward './../components/banner/banner';
 @forward './../components/card/card';
 @forward './../components/header/header';
-@forward './../components/footer/footer'
+@forward './../components/footer/footer';
+@forward './../components/collapse/collapse';
+@forward './../components/section/section';
