--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,3 +9,7 @@
 @forward './../components/footer/footer';
 @forward './../components/collapse/collapse';
 @forward './../components/section/section';
+@forward './../components/carousel/carousel';
+@forward './../components/host/host';
+@forward './../components/lodging/lodging';
+@forward './../components/rate/rating';
